# brain_games

./: Makefile  README.md  pyproject.toml
brain_games/: cli.py  get_random_num.py  main.py
brain_games/games/: calc.py  even.py  gcd.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py
